--- a/Web.html
+++ b/Web.html
@@ -19,6 +19,11 @@
             width: 20;
         }
 
+        .my-img{
+            height: 300px;
+            width: 1500px;
+        }
+
         #description {
             width: 70;
             padding: 15px;
@@ -49,7 +54,7 @@
     <div>
         <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Cisco_logo_blue_2016.svg" alt="logo" height="20">
     </div>
-    <img src="sample pics.jpeg" alt="my image" height="300" width="600">
+    <img src="sample pics.jpeg" class="my-img" alt="My image">
 
     <h1>About Me</h1>
     <div id="about">
@@ -72,7 +77,7 @@
         </div>
 
         <div id="team">
-            <img src="IMG_8493.jpg" alt="team image" height="250">
+            <img src="IMG_8493.jpg"  alt="Team" height="230" width="230">
         </div>
 
     </div>
