--- a/Web.html
+++ b/Web.html
@@ -19,33 +19,58 @@
             width: 20;
         }
 
-        .my-img{
+        .my-img {
             height: 300px;
-            width: 1500px;
+            width: 1350px;
         }
 
         #description {
             width: 70;
-            padding: 15px;
+            padding: none;
+            margin-right: 200px;
+            margin-left: 0;
         }
 
-        .location{
+        .location {
             color: grey;
             margin-bottom: 16px;
         }
-        h2{
+
+        h2 {
             text-align: center;
         }
 
-        a{
+        a {
             text-decoration: none;
         }
-        h3{
+
+        h3 {
             margin-top: 0px;
             margin-bottom: 4px;
         }
-        .apply{
-           float: right;
+
+        .apply {
+            float: right;
+        }
+
+        #footer {
+            background-color: ghostwhite;
+            margin-top: 32px;
+            padding: 8px;
+            text-align: center;
+        }
+
+        #footer-links {
+            list-style: none;
+        }
+
+        #footer-links li {
+            display: inline;
+            margin: 0 32px;
+        }
+
+        .copyright{
+            color: gray;
         }
     </style>
 </head>
@@ -77,7 +102,7 @@
         </div>
 
         <div id="team">
-            <img src="IMG_8493.jpg"  alt="Team" height="230" width="230">
+            <img src="IMG_8493.jpg" alt="Team" height="230" width="280">
         </div>
 
     </div>
@@ -88,27 +113,29 @@
         <a href="" class="apply">Apply</a>
         <h3>Frontend Developer</h3>
         <div class="location">Bengalulu, India</div>
-    </div>
-    <div>
-        <a href="" class="apply">Apply</a>
-        <h3>Backend Developer</h3>
-        <div class="location">Remote</div>
-    </div>
-    <div>
-        <a href="" class="apply">Apply</a>
-        <h3>Data Scientist</h3>
-        <div class="location">Rivers, Nigeria</div>
-    </div>
-    <div>
-        <ul>
-            <li><a href="https://www.netacad.com/catalogs/learn/programming?category=course" target="_blank">Courses</a>
-            </li>
-            <li><a href="https://www.netacad.com/catalogs/learn/programming" target="_blank">Programs</a></li>
-            <li><a href="www.youtube.com" target="_blank">Youtube</a></li>
-        </ul>
-        <span>© 2025, CISCO</span>
-    </div>
-    </p>
+        </div>
+        <div>
+            <a href="" class="apply">Apply</a>
+            <h3>Backend Developer</h3>
+            <div class="location">Remote</div>
+        </div>
+        <div>
+            <a href="" class="apply">Apply</a>
+            <h3>Data Scientist</h3>
+            <div class="location">Rivers, Nigeria</div>
+        </div>
+
+        <div id="footer">
+            <ul id="footer-links">
+                <li><a href="https://www.netacad.com/catalogs/learn/programming?category=course"
+                        target="_blank">Courses</a>
+                </li>
+                <li><a href="https://www.netacad.com/catalogs/learn/programming" target="_blank">Programs</a></li>
+                <li><a href="www.youtube.com" target="_blank">Youtube</a></li>
+            </ul>
+            <span class="copyright">© 2025, CISCO</span>
+        </div>
+        </p>
 </body>
 
 </html>
